crates/wolf_mem/tests/snapshots/mem_diagnostics__e1301_volatile_outside.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1301]: a volatile read needs an `unsafe` block
 --> mem:///main.lu:2:5
  |
2 |     p.read_volatile()
  |     ^^^^^^^^^^^^^^^^^ raw-tier operation in safe code
  |
  = note: raw pointers are inert data anywhere — only the tier's operations need the ring. Wrap
    this in `unsafe { }` and state the invariant in a `# Safety:` comment; the rules inside
    are simpler than the safe tier's, not stricter.

error[E1301]: a volatile write needs an `unsafe` block
 --> mem:///main.lu:5:5
  |
5 |     p.write_volatile(1)
  |     ^^^^^^^^^^^^^^^^^^^ raw-tier operation in safe code
  |
  = note: raw pointers are inert data anywhere — only the tier's operations need the ring. Wrap
    this in `unsafe { }` and state the invariant in a `# Safety:` comment; the rules inside
    are simpler than the safe tier's, not stricter.
