crates/wolf_mem/tests/snapshots/mem_diagnostics__w1301_missing_safety.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
warning[W1301]: this `unsafe` block does not state its invariant
 --> mem:///main.lu:4:5
  |
4 |     unsafe {
  |     ^^^^^^ add a `# Safety:` comment
  |
  = note: the block discharges a proof obligation the checker cannot; write the invariant down for
    the auditors who will read this ring (`// # Safety: …` above the block).
